--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
           {{project.name}}
         </a>
         @if (project.siteUrl) {
-          <a class="project__href" [href]="project.siteUrl"><img height="50" src="../../assets/images/web.png" /></a>
+          <a class="project__href" target="_blank" [href]="project.siteUrl"><img height="50" src="../../assets/images/web.png" /></a>
         }
       </mat-grid-list>
     </mat-grid-tile>
